简历更新/物联网综合课设报告完成

--- a/简历/简历-云计算方向/CV.Chinese/resume.tex
+++ b/简历/简历-云计算方向/CV.Chinese/resume.tex
@@ -97,7 +97,7 @@
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 	\section{链接}
-	个人主页:  \href{http://yindaheng98.top}{\bf yindaheng98.top} \\
+	个人主页:  \href{http://yindaheng98.top:8888}{\bf yindaheng98.top} \\
 	Github: \href{https://github.com/yindaheng98}{\bf @yindaheng98} \\
 	\sectionsep
 
@@ -124,7 +124,6 @@
 	\begin{tabular}{ll}
 		IELTS & 6.5 \\
 		CET6  & 576 \\
-		CET4  & 543 \\
 	\end{tabular}
 	\sectionsep
 	\subsection{编程 {\small (代码行数)}}
@@ -140,11 +139,17 @@
 	\end{tabular}
 	\sectionsep
     
+	\subsection{并行计算}
+	\location{基本掌握}
+	Athread(神威·太湖之光) \textbullet{} SIMD \\
+	\location{大致了解}
+	CUDA \textbullet{} MPI \\
+    \sectionsep
+    
 	\subsection{云计算}
 	\location{基本掌握}
 	Docker \textbullet{} Docker-compose \\
-	\location{大致了解}
-	Ubuntu Server 操作系统 \textbullet{} Hadoop\\
+	Ubuntu Server 操作系统\\
 	\sectionsep
 
 	\subsection{人工智能}
@@ -166,7 +171,7 @@
     \subsection{研究兴趣}
     \vspace{\topsep}
 	\begin{tightemize}
-		\item 应用研究兴趣：云数据融合、医疗数据挖掘、大规模并行计算
+		\item 应用研究兴趣：大规模并行计算、云数据融合、医疗数据挖掘
 		\item 理论研究兴趣：机器学习算法
 	\end{tightemize}
     \subsection{个人特质}
@@ -186,10 +191,10 @@
 	\section{主要科研项目}
 	\runsubsection{机器学习算法库mlpack在神威·太湖之光系统上的移植}
 	\descript{}
-	\location{2019.03 | 江南大学/神威·太湖之光软件部门}
+	\location{2019.03 | 江南大学超算俱乐部/神威·太湖之光软件部门}
 	\begin{tightemize}
-		\item 参与kernels部分的移植
-		\item 目前正处于调研与筹划阶段
+		\item 参与kernels部分的移植以及超算俱乐部成员培训
+		\item 依托此项目独立完成的太湖之光平台开发教程是目前俱乐部的内部培训教材之一
 	\end{tightemize}
     \sectionsep
 
@@ -206,17 +211,17 @@
             \item 将患者健康状况的预测范围推进到终末事件期，制定长期治疗方案提供参考
         \end{tightemize}
         \vspace{\topsep}
-		\item 目前正整理统计结果准备撰写第一篇论文
+		\item 目前正整理统计结果撰写第一篇论文
 	\end{tightemize}
     \sectionsep
 
     \section{主要实践项目}
-	\runsubsection{\href{http://yindaheng98.top/ExpertField}{\bf ExpertField}}
+	\runsubsection{\href{http://yindaheng98.top:8888/ExpertField}{\bf ExpertField}}
 	\descript{2019.03}
 	\begin{tightemize}
 		\item 为中科院上海植生所解决了试验田人工采集数据的收集整理问题
-		\item 基于 Docker 的混合微服务系统
-		\item 调研相关开源实现，确定工作流程和架构选型，实现基于 YAML parser 和 Docker-compose 的快速部署
+		\item 9人参与开发，是包含下层传感器数据采集和传输、上层数据管理的完整物联网系统
+		\item 前端包含STM32传感器数据采集、Android应用，服务器端包含node、 php、 Spring三种开发框架， 是基于Docker-compose快速部署的混合微服务系统
 	\end{tightemize}
 	\sectionsep
 
@@ -229,7 +234,8 @@
 	\end{tightemize}
     \sectionsep
     
-	\runsubsection{\href{http://yindaheng98.top/Calendars}{\bf Calendars}}
+	\runsubsection{\href{http://yindaheng98.top:8888/Calendars/login.html
+	}{\bf Calendars}}
 	\descript{2017.12}
 	\begin{tightemize}
 		\item 集日常事务、课程表、成绩管理、项目规划功能于一体的跨平台网页应用
