--- a/简历/简历-人工智能方向/CV.Chinese/resume.tex
+++ b/简历/简历-人工智能方向/CV.Chinese/resume.tex
@@ -96,7 +96,7 @@
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 	\section{链接}
-	个人主页:  \href{http://yindaheng98.top}{\bf yindaheng98.top} \\
+	个人主页:  \href{http://yindaheng98.top:8888}{\bf yindaheng98.top} \\
 	Github: \href{https://github.com/yindaheng98}{\bf @yindaheng98} \\
 	\sectionsep
 
@@ -124,7 +124,6 @@
 	\begin{tabular}{ll}
 		IELTS & 6.5 \\
 		CET6  & 576 \\
-		CET4  & 543 \\
 	\end{tabular}
 	\sectionsep
 	\subsection{编程 {\small (代码行数)}}
@@ -146,11 +145,17 @@
 	\location{大致了解}
 	Tensorflow \textbullet{} sklearn \\
     \sectionsep
+
+	\subsection{并行计算}
+	\location{基本掌握}
+	Athread(神威·太湖之光) \textbullet{} SIMD \\
+	\location{大致了解}
+	CUDA \textbullet{} MPI \\
+    \sectionsep
     
 	\subsection{云计算}
 	\location{基本掌握}
 	Docker \textbullet{} Docker-compose \\
-	\location{大致了解}
 	Ubuntu Server 操作系统 \\
 	\sectionsep
 
@@ -171,11 +176,11 @@
 	\section{主要科研项目}
 	\runsubsection{机器学习算法库mlpack在神威·太湖之光系统上的移植}
 	\descript{}
-	\location{2019.04至今 | 江南大学/神威·太湖之光软件部门}
+	\location{2019.12至今 | 江南大学超算俱乐部/神威·太湖之光软件部门}
 	\vspace{\topsep}
 	\begin{tightemize}
-		\item 参与kernels部分的移植
-		\item 目前正处于调研与筹划阶段
+		\item 参与kernels部分的移植以及超算俱乐部成员培训
+		\item 依托此项目独立完成的太湖之光平台开发教程是目前俱乐部的内部培训教材之一
 	\end{tightemize}
     \sectionsep
 
@@ -197,7 +202,7 @@
     \sectionsep
 
     \section{主要实践项目}
-	\runsubsection{\href{http://yindaheng98.top/ExpertField}{\bf ExpertField}}
+	\runsubsection{\href{http://yindaheng98.top:8888/ExpertField}{\bf ExpertField}}
 	\descript{2019.03至今}
 	\begin{tightemize}
 		\item 为中科院上海植生所解决了试验田人工采集数据的收集整理问题
@@ -215,7 +220,8 @@
 	\end{tightemize}
     \sectionsep
     
-	\runsubsection{\href{http://yindaheng98.top/Calendars}{\bf Calendars}}
+	\runsubsection{\href{http://yindaheng98.top:8888/Calendars/login.html
+	}{\bf Calendars}}
 	\descript{2017.10$\sim$2017.12}
 	\begin{tightemize}
 		\item 集日常事务、课程表、成绩管理、项目规划功能于一体的跨平台网页应用
