--- a/简历/简历-人工智能方向/CV/resume.tex
+++ b/简历/简历-人工智能方向/CV/resume.tex
@@ -133,6 +133,13 @@ Pytorch \\
 Tensorflow \textbullet{} sklearn \\
 \sectionsep
 
+\subsection{Parallel Programming}
+\location{Familiar}
+Athread(Sunway TaihuLight) \textbullet{} SIMD \\
+\location{Knowledge}
+CUDA \textbullet{} MPI \\
+\sectionsep
+
 \subsection{Cloud Computing}
 \location{Familiar}
 Docker \textbullet{} Docker-compose \\
@@ -150,11 +157,11 @@ Ubuntu Server \\
 \section{Research \& Development}
 \runsubsection{Mlpack migration on Sunway Platfrom}
 \descript{}
-\location{2019.04$\sim$currently | Jiangnan University/Software department, Sunway R\&D Group}
+\location{2019.04$\sim$currently | Supercomputer Club, JNU/Software department, Sunway R\&D Group}
 \vspace{\topsep}
 \begin{tightemize}
-    \item Plays a role in kernels migration
-    \item Current progress: Investigating and planning
+    \item Plays a role in kernels migration and club member training
+    \item Current results: A textbook for club member training
 \end{tightemize}
 \sectionsep
 
@@ -175,7 +182,7 @@ Ubuntu Server \\
 \sectionsep
 
 \section{Projects}
-\runsubsection{\href{http://yindaheng98.top/ExpertField}{\bf ExpertField}}
+\runsubsection{\href{http://yindaheng98.top:8888/ExpertField}{\bf ExpertField}}
 	\descript{2019.03$\sim$currently}
     \begin{tightemize}
         \item Aiming at field data collection, both artificial and automatic
@@ -193,7 +200,8 @@ Ubuntu Server \\
 	\end{tightemize}
     \sectionsep
     
-	\runsubsection{\href{http://yindaheng98.top/Calendars}{\bf Calendars}}
+	\runsubsection{\href{http://yindaheng98.top:8888/Calendars/login.html
+    }{\bf Calendars}}
 	\descript{2017.10$\sim$2017.12}
 	\begin{tightemize}
 		\item A cross-platform web application that integrates daily affairs, curriculum, achievement management, and project planning
