--- a/简历/简历-云计算方向/CV.Chinese/resume.tex
+++ b/简历/简历-云计算方向/CV.Chinese/resume.tex
@@ -118,6 +118,7 @@
 		高等数学（下）     & 97  \\
 		概率论与数理统计   & 98  \\
 		复变函数与积分变换 & 100 \\
+		离散数学 &94\\
 	\end{tabular}
 	\sectionsep
 	\subsection{英语}
@@ -128,13 +129,13 @@
 	\sectionsep
 	\subsection{编程 {\small (代码行数)}}
 	\begin{tabular}{ll}
-		Python     & 8577  \\
-		Latex      & 8036  \\
-		matlab     & 7265  \\
-		Java       & 6024  \\
-		HTML       & 3758  \\
-		Javascript & 3474  \\
-		PHP        & 2915  \\
+		Latex      & 14142  \\
+		Python     & 9808  \\
+		matlab     & 6216  \\
+		Java       & 6030  \\
+		Javascript & 3873  \\
+		HTML       & 3816  \\
+		PHP        & 3646  \\
 		C\#        & 1834  \\
 	\end{tabular}
 	\sectionsep
@@ -171,14 +172,14 @@
     \subsection{研究兴趣}
     \vspace{\topsep}
 	\begin{tightemize}
-		\item 应用研究兴趣：大规模并行计算、云数据融合、医疗数据挖掘
+		\item 应用研究兴趣：大规模并行计算、虚拟化云计算、医疗数据挖掘
 		\item 理论研究兴趣：机器学习算法
 	\end{tightemize}
     \subsection{个人特质}
     \vspace{\topsep}
     \begin{tightemize}
         \item 历经两个数学竞赛和两个数学建模竞赛，具有较良好的数学抽象和建模能力
-		\item 大学4年间总代码量30000行（不计Latex和HTML），具有良好的编码和架构能力
+		\item 大学4年间总代码量约3.5万行（不计Latex），具有良好的编程和架构能力
 		\item 领导完成三个开发项目，合作开发项目多个，具有良好的合作精神和领导能力
 	\end{tightemize}
     \sectionsep
@@ -202,8 +203,7 @@
 	\descript{}
 	\location{2018.12 | 江南大学/无锡市人民医院肾内科}
     \begin{tightemize}
-        \item 该项目旨在解决目前基于BCM的水负荷评估效果不佳的问题
-        \item 该项目计划分为以下三步：
+        \item 该项目旨在解决目前基于BCM的水负荷评估效果不佳的问题，分为以下三步：
         \vspace{\topsep}
         \begin{tightemize}
             \item 在现有研究的BCM水负荷评估研究的基础上加入人体成分化验数据辅助评估
@@ -211,7 +211,7 @@
             \item 将患者健康状况的预测范围推进到终末事件期，制定长期治疗方案提供参考
         \end{tightemize}
         \vspace{\topsep}
-		\item 目前正整理统计结果撰写第一篇论文
+		\item 论文 Specific Bioelectrical Impedance Vector Analysis (BIVA) in the Evaluation of Blood Composition in Patients Receiving Dialysis 正在撰写中
 	\end{tightemize}
     \sectionsep
 
@@ -220,8 +220,8 @@
 	\descript{2019.03}
 	\begin{tightemize}
 		\item 为中科院上海植生所解决了试验田人工采集数据的收集整理问题
-		\item 9人参与开发，是包含下层传感器数据采集和传输、上层数据管理的完整物联网系统
-		\item 前端包含STM32传感器数据采集、Android应用，服务器端包含node、 php、 Spring三种开发框架， 是基于Docker-compose快速部署的混合微服务系统
+		\item 9人参与开发，总代码量近万行，包含STM32传感器数据采集、Android App人工数 据采集和云端数据融合与管理，是一套完整的物联网应用系统
+		\item 服务端由多种语言开发而成，是基于Docker虚拟化技术快速部署的混合微服务架构
 	\end{tightemize}
 	\sectionsep
 
@@ -238,10 +238,10 @@
 	}{\bf Calendars}}
 	\descript{2017.12}
 	\begin{tightemize}
-		\item 集日常事务、课程表、成绩管理、项目规划功能于一体的跨平台网页应用
-		\item 参与人数5人，项目规模约4000行代码
+		\item 是集日常事务、课程表、成绩管理、项目规划功能于一体的跨平台网页应用
+		\item 参与人数5人，总代码量约4000行，依托两台阿里云服务器和一台实体服务器运作
+		\item 使用网络接口和Redis消息队列在服务器之间传递信息，并与教务处接口对接
 		\item 使用Redis阻塞队列和长轮询方式实现了多人即时项目流程编辑
-		\item 使用Python阻塞进程实现了能承受大流量的课程表查询组件
 	\end{tightemize}
 	\sectionsep
 
@@ -253,7 +253,7 @@
     \begin{tabular}{lll}
         2019.05 & 全国大学生服务外包创新创业大赛 & 三等奖 \\
         2019.04 & 美国大学生数学建模竞赛 & S奖 \\
-        2018.11 & 江南大学2016-2017学年学业奖学金 & 一等 \\
+        2018.11 & 江南大学2016-2017学年一等学业奖学金 &  \\
         2018.09 & 全国大学生数学建模竞赛 & 国家级二等奖 \\
         2017.11 & 第九届全国大学生数学竞赛（非数学类） & 江苏赛区二等奖 \\
         2017.11 & 2016-2017年度国家奖学金 & \\
