--- a/简历/简历-人工智能方向/CV/resume.tex
+++ b/简历/简历-人工智能方向/CV/resume.tex
@@ -81,7 +81,7 @@
 
 \section{Education} 
 \subsection{Jiangnan University}
-\descript{Internet of Things}
+\descript{Major in Internet of Things}
 \location{2016.09$\sim$2020.09}
 \sectionsep
 \subsection{Cambridge University}
@@ -110,27 +110,19 @@ Github:\href{https://github.com/yindaheng98}{\bf yindaheng98}
 \begin{tabular}{ll}
     IELTS & 6.5 \\
     CET6  & 576 \\
-    CET4  & 543 \\
 \end{tabular}
 \sectionsep
 \subsection{Programming \newline{\small (Lines of code)}}
 \begin{tabular}{ll}
-    Python     & 8577  \\
-    Latex      & 8036  \\
-    matlab     & 7265  \\
-    Java       & 6024  \\
-    HTML       & 3758  \\
-    Javascript & 3474  \\
-    PHP        & 2915  \\
+    Latex      & 14142  \\
+    Python     & 9808  \\
+    matlab     & 6216  \\
+    Java       & 6030  \\
+    Javascript & 3873  \\
+    HTML       & 3816  \\
+    PHP        & 3646  \\
     C\#        & 1834  \\
 \end{tabular}
-\sectionsep
-
-\subsection{Aritificial Intelligence}
-\location{Familiar}
-Pytorch \\
-\location{Knowledge}
-Tensorflow \textbullet{} sklearn \\
 \sectionsep
 
 \subsection{Parallel Programming}
@@ -145,6 +137,13 @@ CUDA \textbullet{} MPI \\
 Docker \textbullet{} Docker-compose \\
 \location{Knowledge}
 Ubuntu Server \\
+
+\subsection{Aritificial Intelligence}
+\location{Familiar}
+Pytorch \\
+\location{Knowledge}
+Tensorflow \textbullet{} sklearn \\
+\sectionsep
 
 \end{minipage} 
 \hfill
@@ -173,11 +172,11 @@ Ubuntu Server \\
         \vspace{\topsep}
         \begin{tightemize}
             \item Analyse patient's body composition data and improve BCM-based over-hydration evaluation with bioimpedance vector analysis
-            \item Predict the short-term health status of patients with new over-hydration evaluation method
+            \item Predict the short-term health status of patients with new evaluation method
             \item Extend the prediction of the patient's health status to the end event period, providing a reference for the development of long-term treatment options
         \end{tightemize}
         \vspace{\topsep}
-		\item Current progress: Gathering preliminary statistics results, preparing for first paper
+		\item Related paper \textit{Specific Bioelectrical Impedance Vector Analysis (BIVA) in the Evaluation of Blood Composition in Patients Receiving Dialysis} is in writting
 \end{tightemize}
 \sectionsep
 
@@ -185,10 +184,10 @@ Ubuntu Server \\
 \runsubsection{\href{http://yindaheng98.top:8888/ExpertField}{\bf ExpertField}}
 	\descript{2019.03$\sim$currently}
     \begin{tightemize}
-        \item Aiming at field data collection, both artificial and automatic
-        \item 9 cooperators, built a complete IoT system
+        \item Aiming at field data collection, both artificial(Android App) and automatic(STM32)
+        \item 9 cooperators, nearly 10,000 lines of code, a complete IoT system
 		\item Will be deployed in Institute of Plant Physiology \& Ecology, CAS
-		\item A fast deployable combined microservice system based on Docker and YAML parser
+		\item A fast deployable combined microservice system based on Docker VM
 	\end{tightemize}
 	\sectionsep
 
@@ -205,7 +204,7 @@ Ubuntu Server \\
 	\descript{2017.10$\sim$2017.12}
 	\begin{tightemize}
 		\item A cross-platform web application that integrates daily affairs, curriculum, achievement management, and project planning
-		\item 5 cooperators, 4000 lines of code
+		\item 5 cooperators, 4000 lines of code, 2 aliyun servers and 1 physical server
 		\item Implemented multi-person instant process graph editing and a high-flow curriculum query component using Redis blocking queue and long polling
 	\end{tightemize}
 	\sectionsep
@@ -227,14 +226,14 @@ Ubuntu Server \\
 \subsection{Research interest}
     \vspace{\topsep}
 	\begin{tightemize}
-		\item Theoretical: Machine Learning Algorithm, Brain inspired Computing
-		\item Application: Mining on medical data, Cloud computing in IoT System
+		\item Application: Parallel computing, Cloud computing, Mining on medical data
+		\item Theoretical: Machine Learning Algorithm
 	\end{tightemize}
     \subsection{Personal qualities}
     \vspace{\topsep}
     \begin{tightemize}
         \item After two mathematical contests and two mathematical contests in modeling, I have a good mathematical abstraction and modeling ability
-		\item After 30,000 lines of coding, I have good coding and architecture ability
+		\item After 35 thousand lines of coding, I have good coding and architecture ability
 	\end{tightemize}
 
 \end{minipage} 
