--- a/简历/简历-云计算方向/CV.Chinese/resume.tex
+++ b/简历/简历-云计算方向/CV.Chinese/resume.tex
@@ -195,8 +195,8 @@
 	\runsubsection{\href{https://github.com/yindaheng98/WebSiteAnalysisKit}{\bf WebSiteAnalysisKit}}
 	\descript{2018.12 | 合作项目}
 	\begin{tightemize}
-		\item JavaScript用户行为捕捉、Python用户行为分析、Hadoop用户层次聚类
-		\item Echarts多图表联动展示用户行为分析结果
+		\item 已申请专利：一种基于云计算和大数据分析的用户行为分析平台
+		\item JavaScript用户行为捕捉、Python用户行为分析、Hadoop用户层次聚类Echarts多 图表联动展示分析结果
 	\end{tightemize}
 	\sectionsep
 
