--- a/简历/简历-云计算方向/CV/resume.tex
+++ b/简历/简历-云计算方向/CV/resume.tex
@@ -180,8 +180,8 @@ Ubuntu Server \\
 	\runsubsection{\href{https://github.com/yindaheng98/WebSiteAnalysisKit}{\bf WebSiteAnalysisKit}}
 	\descript{2018.12 | Cooperator}
 	\begin{tightemize}
-		\item Implement GANomaly with Tensorflow, for camera abnormality judgment
-		\item Use Opencv and Tensorflow to convert video format to tfrecord dataset
+		\item Patent applied: A user behavior analysis platform based on cloud computing and big data analysis
+		\item Use JavaScript for user behavior capture,  use Python for user behavior analysis, use Hadoop for user hierarchical clustering, use Echarts for visualization
 	\end{tightemize}
     \sectionsep
     
