简历更新，个人陈述更新

--- a/简历/简历-云计算方向/CV.Chinese/resume.tex
+++ b/简历/简历-云计算方向/CV.Chinese/resume.tex
@@ -218,7 +218,7 @@
 	\begin{tightemize}
 		\item 项目要解决的问题：目前基于生物电阻抗分析的病情评价方法数据基础薄弱，结果不 准确；使用化学指标评价患者病情过程精准但昂贵而耗时，容易延误病情
         \item 项目内容：挖掘肾内科积累的临床数据，寻找人体电阻抗和患者病情间的联系，开发 基于生物电阻抗技术的尿毒症病情综合评价仪器
-		\item 有一篇一作论文待发，将于今年九月前投稿至Clinical Nutrition(SCI Expanded)
+		\item 有一篇一作论文待发，将于今年十月前投稿至Clinical Nutrition(SCI Expanded)
 	\end{tightemize}
 	\sectionsep
 
