--- a/简历/简历-云计算方向/CV/resume.tex
+++ b/简历/简历-云计算方向/CV/resume.tex
@@ -65,7 +65,7 @@
 %     TITLE NAME
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\namesection{Yin}{Daheng}{ \urlstyle{same}\href{mailto:yindaheng98@163.com}{yindaheng98@163.com} | +86 188 0057 2931 | Jiangnan University, Wuxi, Jiangsu}
+\namesection{Yin}{Daheng}{ \urlstyle{same}\href{mailto:yindaheng98@163.com}{yindaheng98@163.com} | +86 188 0057 2931 | Southeast University, Wuxi, Jiangsu}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -80,9 +80,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Education} 
+\subsection{Southeast University}
+\descript{Major in Network Engineering}
+\location{2020.09$\sim$}
+\sectionsep
 \subsection{Jiangnan University}
 \descript{Major in Internet of Things}
-\location{2016.09$\sim$2020.09}
+\location{2016.09$\sim$2020.08}
 \sectionsep
 \subsection{Cambridge University}
 \descript{Summer School}
@@ -91,7 +95,7 @@
 \sectionsep
 
 \section{Links}
-WebSite:\newline\href{http://yindaheng98.top:8888}{\bf yindaheng98.top:8888} \\
+WebSite:\newline\href{http://yindaheng98.top}{\bf yindaheng98.top:30000} \\
 Github:\href{https://github.com/yindaheng98}{\bf yindaheng98}
 \sectionsep
 
