--- a/简历/简历-云计算方向/CV/resume.tex
+++ b/简历/简历-云计算方向/CV/resume.tex
@@ -82,7 +82,7 @@
 \section{Education} 
 \subsection{Southeast University}
 \descript{Major in Network Engineering}
-\location{2020.09$\sim$}
+\location{2020.09$\sim$present}
 \sectionsep
 \subsection{Jiangnan University}
 \descript{Major in Internet of Things}
@@ -157,7 +157,7 @@ Ubuntu Server \\
 \vspace{\topsep}
 \begin{tightemize}
 \item Project background: current bioimpedance analysis method is inaccurate; assay in comprehensive condition assessment for uremic patients is expensive and time consuming
-\item Project content: mining clinical data, reveal the relationship between bioimpedance and patient's condition, develop a comprehensive condition assessment machine
+\item Project content: clinical data was mined; relationship between bioimpedance and patient's condition was revealed; a comprehensive condition assessment machine was developed
 \end{tightemize}
 \sectionsep
 
