--- a/简历-人工智能方向/CV.Chinese/resume2022.tex
+++ b/简历-人工智能方向/CV.Chinese/resume2022.tex
@@ -140,17 +140,40 @@
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 	\section{主要科研项目}
-	\runsubsection{边缘计算场景下实时视频流超分辨率多机协同推理优化}
+	\runsubsection{边缘计算场景下实时视频流超分辨率多机协同推理加速}
 	\descript{2021至今}
 	\vspace{\topsep}
 	\begin{tightemize}
-		\item 参与kernels部分的移植以及超算俱乐部成员培训
-		\item 依托此项目独立完成的太湖之光平台开发教程是目前俱乐部的内部培训教材之一
+		\item D. Yin et al., "WAEVSR: Enabling collaborative live video super-resolution in wide-area MEC environment," 已投稿至WWW2023
+		\item 主要内容：
 	\end{tightemize}
     \sectionsep
 
+	\section{合作科研项目}
+	\runsubsection{在网计算场景下多机协同推理优化}
+	\descript{2021$\sim$2022}
+	\vspace{\topsep}
+	\begin{tightemize}
+		\item X. Guo et al., "Exploiting the computational path diversity with in-network computing for MEC," 2022 19th Annual IEEE International Conference on Sensing, Communication, and Networking (SECON), 2022, pp. 1-9.
+		\item 主要内容：
+		\item 我的贡献：
+	\end{tightemize}
+    \sectionsep
+
+	\runsubsection{在网计算场景下多机协同推理优化}
+	\descript{2020$\sim$2021}
+	\vspace{\topsep}
+	\begin{tightemize}
+		\item M. Liu et al., "Accelerating Multi-Object Tracking in Edge Computing Environment with Time-Spatial Optimization," 2021 Ninth International Conference on Advanced Cloud and Big Data (CBD), 2022, pp. 279-284, doi: 10.1109/CBD54617.2021.00055.
+		\item A. Tang et al., "Accelerate High-resolution Multi-Object Tracking on Edge Devices with Region-aware Parallel Inference," 已投稿至WWW2023
+		\item 主要内容：
+		\item 我的贡献：目标跟踪模型的量化加速
+	\end{tightemize}
+    \sectionsep
+	
+
     \section{主要实践项目}
-	\runsubsection{\href{https://github.com/liu-mengyang/trt-elan}{\bf TensorRT Hackathon 2022 竞赛 优胜奖}}
+	\runsubsection{\bf TensorRT Hackathon 2022 竞赛 优胜奖}
 	\descript{2022.03$\sim$2022.5}
 	\begin{tightemize}
 		\item 基于TensorRT对图像超分辨率算法ELAN进行量化加速
@@ -158,7 +181,7 @@
 	\end{tightemize}
 	\sectionsep
 
-	\runsubsection{\href{https://github.com/liu-mengyang/trt-fairmot}{\bf TensorRT Hackathon 2021 竞赛 三等奖}}
+	\runsubsection{\bf TensorRT Hackathon 2021 竞赛 三等奖}
 	\descript{2021.03$\sim$2021.5}
 	\begin{tightemize}
 		\item 基于TensorRT对视频跟踪算法FairMOT进行量化加速
@@ -192,20 +215,5 @@
         2017.11 & 2016-2017年度国家奖学金 & \\
 	\end{tabular}
     \sectionsep
-    
-    \section{个人陈述}
-    \subsection{研究兴趣}
-    \vspace{\topsep}
-	\begin{tightemize}
-		\item 理论研究兴趣：机器学习算法、神经网络可解释性、类人脑计算模型
-		\item 应用研究兴趣：医疗数据挖掘、物联网云数据融合、大规模并行计算
-	\end{tightemize}
-    \subsection{个人特质}
-    \vspace{\topsep}
-    \begin{tightemize}
-        \item 历经两个数学竞赛和两个数学建模竞赛，具有较良好的数学抽象和建模能力
-		\item 大学4年间总代码量近30000行（不计Latex和HTML），具有良好的编码和架构能力
-		\item 领导完成多人开发项目4个，合作开发项目2个，具有良好的合作和领导能力
-	\end{tightemize}
 \end{minipage}
 \end{document}
