--- a/CV.Chinese/AI方向简历2022.tex
+++ b/CV.Chinese/AI方向简历2022.tex
@@ -140,34 +140,35 @@
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 	\section{主要科研项目}
-	\runsubsection{边缘计算场景下实时视频流超分辨率多机协同推理加速}
+	\runsubsection{边缘计算环境下实时视频流超分辨率多机协同推理加速}
 	\descript{2021至今}
 	\vspace{\topsep}
 	\begin{tightemize}
+		\item 设计并实现了适合多机分布式并行加速的{\bfseries 并行友好型视频超分辨率神经网络结构}
+		\item 对并行友好型神经网络模型的中间特征进行量化压缩以便在多机间传输
+		\item 实现{\bfseries 超分辨率集成解码器}以降低流畅播放对推断系统吞吐量的要求
+		\item 针对上述神经网络结构和解码器设计了{\bfseries 多机协同推断控制机制}
 		\item D. Yin et al., "WAEVSR: Enabling collaborative live video super-resolution in wide-area MEC environment," 已投稿至WWW2023
-		\item 主要内容：
 	\end{tightemize}
     \sectionsep
 
 	\section{合作科研项目}
-	\runsubsection{在网计算场景下多机协同推理优化}
+	\runsubsection{在网计算环境中的多机协同推理优化}
 	\descript{2021$\sim$2022}
-	\vspace{\topsep}
 	\begin{tightemize}
-		\item X. Guo et al., "Exploiting the computational path diversity with in-network computing for MEC," 2022 19th Annual IEEE International Conference on Sensing, Communication, and Networking (SECON), 2022, pp. 1-9.
 		\item 主要内容：
+		\item X. Guo et al., "Exploiting the computational path diversity with in-network computing for MEC," 2022 19th Annual IEEE International Conference on Sensing, Communication, and Networking (SECON), 2022, pp. 1-9.
 		\item 我的贡献：
 	\end{tightemize}
     \sectionsep
 
 	\runsubsection{在网计算场景下多机协同推理优化}
-	\descript{2020$\sim$2021}
-	\vspace{\topsep}
+	\descript{2020$\sim$2022}
 	\begin{tightemize}
-		\item M. Liu et al., "Accelerating Multi-Object Tracking in Edge Computing Environment with Time-Spatial Optimization," 2021 Ninth International Conference on Advanced Cloud and Big Data (CBD), 2022, pp. 279-284, doi: 10.1109/CBD54617.2021.00055.
-		\item A. Tang et al., "Accelerate High-resolution Multi-Object Tracking on Edge Devices with Region-aware Parallel Inference," 已投稿至WWW2023
 		\item 主要内容：
 		\item 我的贡献：目标跟踪模型的量化加速
+		\item M. Liu et al., "Accelerating Multi-Object Tracking in Edge Computing Environment with Time-Spatial Optimization," 2021 Ninth International Conference on Advanced Cloud and Big Data (CBD), 2022, pp. 279-284.
+		\item A. Tang et al., "Accelerate High-resolution Multi-Object Tracking on Edge Devices with Region-aware Parallel Inference," 已投稿至WWW2023
 	\end{tightemize}
     \sectionsep
 	
