--- a/CV.Chinese/AI方向简历2022.tex
+++ b/CV.Chinese/AI方向简历2022.tex
@@ -144,10 +144,10 @@
 	\descript{2021至今}
 	\vspace{\topsep}
 	\begin{tightemize}
-		\item 设计并实现了适合多机分布式并行加速的{\bfseries 并行友好型视频超分辨率神经网络结构}
-		\item 对并行友好型神经网络模型的中间特征进行量化压缩以便在多机间传输
-		\item 实现{\bfseries 超分辨率集成解码器}以降低流畅播放对推断系统吞吐量的要求
-		\item 针对上述神经网络结构和解码器设计了{\bfseries 多机协同推断控制机制}
+		\item 设计并实现了适合多机并行加速的{\bfseries 并行友好型视频超分辨率神经网络结构}
+		\item 对并行友好型神经网络模型的中间特征进行维度压缩和8bit量化以便在多机间传输
+		\item 基于libvpx源码实现了{\bfseries 超分辨率集成解码器}以降低流畅播放对推断系统吞吐量的要求
+		\item 基于WebRTC设计并实现了{\bfseries 多机协同推断控制机制}
 		\item D. Yin et al., "WAEVSR: Enabling collaborative live video super-resolution in wide-area MEC environment," 已投稿至WWW2023
 	\end{tightemize}
     \sectionsep
