--- a/CV.Chinese/AI方向简历2022.tex
+++ b/CV.Chinese/AI方向简历2022.tex
@@ -73,7 +73,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.25\textwidth}
+\begin{minipage}[t]{0.2\textwidth}
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	%     EDUCATION
@@ -102,10 +102,10 @@
 
 	\section{成绩}
 	\subsection{绩点}
-	\begin{tabular}{llll}
+	\begin{tabular*}{\linewidth}{lr@{\extracolsep{\fill}}c@{\extracolsep{\fill}}l}
 		本科绩点&3.59&/&4 \\
 		硕士均分&81.69&/&100 \\
-	\end{tabular}
+	\end{tabular*}
 	\sectionsep
 	\subsection{英语}
 	\begin{tabular}{ll}
@@ -119,10 +119,10 @@
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 	\section{链接}
-	\begin{tabular}{ll}
+	\begin{tabular*}{\linewidth}{l@{\extracolsep{\fill}}l}
 		Github & \href{https://github.com/yindaheng98}{\bf @yindaheng98} \\
 		Blog  & \href{http://www.yindaheng98.top}{\bf yindaheng98.top} \\
-	\end{tabular}
+	\end{tabular*}
 	\sectionsep
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -133,7 +133,7 @@
 
 \end{minipage}
 \hfill
-\begin{minipage}[t]{0.73\textwidth}
+\begin{minipage}[t]{0.77\textwidth}
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	%     EXPERIENCE
